--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </center>
   </form>
   
-  <iframe name="hidden_iframe" style="display:none;" onload="if(submitted){window.location.href='https://lnwtong.github.io/shoppdeeinstagramformthank.github.io/';}"></iframe><script>
+  <iframe name="hidden_iframe" style="display:none;" onload="if(submitted){window.location='https://lnwtong.github.io/shoppdeeinstagramformthank.github.io/';}"></iframe><script>
   var submitted = false;
 </script>
 </body>
