--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
 
   <br><h1>Shopdee Instagram Card Form</h1><br><br><br>
 
+  
+  <div class="form-wrapper">
+    <script type="text/javascript" src="https://form.jotform.com/jsform/251802899282063"></script>
+  </div>
+  
   <form action="https://docs.google.com/forms/d/e/1FAIpQLScUwvRigh9Vid5mMCSHGUBgTKBqmiPlBS_BpG8TiqnkcrU42g/viewform?usp=header" method="post" enctype="multipart/form-data" target="hidden_iframe" onsubmit="submitted=true";>
     <center>
     <label for="name">instagram name</label>
