--- a/index.html
+++ b/index.html
@@ -18,64 +18,6 @@
       color: white;
       text-shadow: 1px 1px 3px black;
     }
-
-    /* รูปตรงกลาง */
-    .center-image {
-      margin: 30px 0;
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 4px solid white;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    }
-
-    /* กล่องฟอร์ม */
-    form {
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 20px;
-      border-radius: 12px;
-      width: 320px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.7);
-    }
-
-    label {
-      display: block;
-      margin-top: 10px;
-      font-weight: bold;
-    }
-
-    input, textarea {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-      border: none;
-      border-radius: 6px;
-      font-size: 1rem;
-    }
-
-    input[type="file"] {
-      padding: 3px;
-      background-color: white;
-      color: black;
-    }
-
-    button {
-      margin-top: 15px;
-      width: 100%;
-      padding: 12px;
-      background-color: #4caf50;
-      border: none;
-      border-radius: 8px;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-      font-size: 1rem;
-    }
-
-    button:hover {
-      background-color: #45a049;
-    }
   </style>
 </head>
 <body>
@@ -84,38 +26,11 @@
 
   
   <div class="form-wrapper">
-    <script type="text/javascript" src="https://form.jotform.com/jsform/251802899282063"></script>
+    <script type="text/javascript" src="https://form.jotform.com/jsform/1234567890"></script>
   </div>
-  
-  <form action="https://docs.google.com/forms/d/e/1FAIpQLScUwvRigh9Vid5mMCSHGUBgTKBqmiPlBS_BpG8TiqnkcrU42g/viewform?usp=header" method="post" enctype="multipart/form-data" target="hidden_iframe" onsubmit="submitted=true";>
-    <center>
-    <label for="name">instagram name</label>
-    <input type="text" id="name" name="name" placeholder="Enter your instagram name" maxlength="10" required>
 
-    <label for="fileupload">Upload your instagram logo</label>
-    <input type="file" id="fileupload" name="fileupload" accept="image/*,.pdf" required>
+  <h5>Once payment is made, there is no guarantee of a refund under any circumstances.</h5>
+  <a href="https://www.instagram.com/byp.tong" target="_blank" style="color: white;">Follow the creator's instagram, Click here</a>
 
-    <label for="fileupload">Upload your instagram QR code</label>
-    <input type="file" id="fileupload" name="fileupload" accept="image/*,.pdf">
-
-    <label for="message">Enter your sentence on the back of the card</label>
-    <textarea id="message" name="message" rows="1" maxlength="20"></textarea>
-
-    <br><h2>Pay 60 baht</h2>
-    <img src="pay.jpeg" width="300" height="400">
-
-
-    <label for="fileupload">Upload your receipt</label>
-    <input type="file" id="fileupload" name="fileupload" accept="image/*,.pdf" required>
-
-    <h5>Once payment is made, there is no guarantee of a refund under any circumstances.</h5>
-    <a href="https://www.instagram.com/byp.tong" target="_blank" style="color: white;">Follow the creator's instagram, Click here</a>
-    <button type="submit">Submit</button><br>
-    </center>
-  </form>
-  
-  <iframe name="hidden_iframe" style="display:none;" onload="if(submitted){window.location='https://lnwtong.github.io/shoppdeeinstagramformthank.github.io/';}"></iframe><script>
-  var submitted = false;
-</script>
 </body>
 </html>
