--- a/index.html
+++ b/index.html
@@ -25,9 +25,16 @@
   <br><h1>Shopdee Instagram Card Form</h1><br><br><br>
 
   
-  <div class="form-wrapper">
-    <script type="text/javascript" src="https://form.jotform.com/jsform/1234567890"></script>
-  </div>
+  <iframe
+    title="JotForm"
+    src="https://form.jotform.com/251802899282063"
+    width="100%"
+    height="800"
+    frameborder="0"
+    allowfullscreen
+    allow="geolocation; microphone; camera">
+  </iframe>
+
 
   <h5>Once payment is made, there is no guarantee of a refund under any circumstances.</h5>
   <a href="https://www.instagram.com/byp.tong" target="_blank" style="color: white;">Follow the creator's instagram, Click here</a>
